apps/k8s-dashboard/yaml/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: k8s-dashboard
spec:
  hostnames:
    - dashboard.piron-tech.com
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes-dashboard-kong-proxy
          port: 80
